# whutlab3

./: CMakeLists.txt  main.cpp
src/config/: Config.h
src/ui/widget/: GameWidget.cpp  GameWidget.h  MsgWidget.cpp  MsgWidget.h
src/ui/window/: MainWindow.cpp  MainWindow.h
src/utility/: ConnectGameCore.cpp  ConnectGameCore.h  RandInt.h
